criação de componentes e correção do CSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,95 +1,8 @@
-<div class="header">
-  <a title="Trusthub" class="logo">
-    <img src="/assets/trust.svg">
-  </a>
 
-  <a href="tel" title="Contate-nos">0800 123456</a>
-</div>
+<app-header></app-header>
 
-<div class="main">
-  <h1>
-    NOSSAS MAQUINAS
-  </h1>
-  <p>
-    Escolha uma de nossas maquininhas para dar mais agilidade e segurança pro seus negócio
-  </p>
 
-  <div>
-    <div class="card" *ngFor="let i of planos">
-      <button class="button">PEÇA JÁ A SUA <img src="/assets/icon-arrow-right.svg"></button>
-      <div>
-        <img src="{{i.maquininha}}">
-        <div>
-          <h4>{{i.title}}</h4>
-          <div>
-            <p>
-              {{i.parcelas}}x R$ {{i.valorParcela}}
-            </p>
-            <p>
-              à vista por R$ {{i.totalPrice}}
-            </p>
-          </div>
-          <p>
-            {{i.description}}
-          </p>
-        </div>
-      </div>
-      <button class="button">PEÇA JÁ A SUA <img src="/assets/icon-arrow-right.svg"></button>
-    </div>
-  </div>
-</div>
+<app-main></app-main>
 
-<div class="faixa-rodape">
-  <p>Trust é tudo, menos banco. Soluções financeiras 100% digitais e integradas</p>
-</div>
 
-<div id="rodape">
-
-  <div>
-    <h4>Trust</h4>
-    <ul>
-      <li *ngFor="let item of trustRodapeLinks">
-        <a title="{{item.text}}" href="{{item.url}}">{{item.text}}</a>
-      </li>
-    </ul>
-  </div>
-
-  <div>
-    <h4>Para sua empresa</h4>
-    <ul>
-      <li *ngFor="let item of ForEmpresa">
-        <a title="{{item.text}}" href="{{item.url}}">{{item.text}}</a>
-      </li>
-    </ul>
-  </div>
-
-  <div>
-    <h4>Seja um Truster!</h4>
-    <ul>
-      <li>
-        <a title="Franquias">Franquias</a>
-      </li>
-    </ul>
-  </div>
-
-  <div>
-    <a title="Trusthub" class="logo">
-      <img src="/assets/trust-white.svg">
-    </a>
-
-    <div id="social-icones">
-      <a title="Facebook" href="https://www.facebook.com">
-        <img src="/assets/icon-facebook.svg">
-      </a>
-      <a title="Linkedin" href="https://br.linkedin.com/">
-        <img src="/assets/icon-linkedin.svg">
-      </a>
-      <a title="Instagram" href="https://www.instagram.com">
-        <img src="/assets/icon-instagram.svg">
-      </a>
-      <a title="Fale conosco" href="mailto:email@email.com">
-        <img src="/assets/icon-email.svg">
-      </a>
-    </div>
-  </div>
-</div>
+<app-footer></app-footer>
