--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,7 +2,7 @@
   background-color: green;
   padding: 1rem 20%;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   color: white;
 }
