--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -12,10 +12,10 @@
     > div {
       width: 50%;
       height: 340px;
-      
+
       > img {
-        height: 100%;
-        width: 100%;
+        max-height: 100%;
+        max-width: 100%;
       }
     }
   }
