Finalização do layout

--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,6 +1,4 @@
-<div class="container-fluid text-center pb-5">
-  <div class="row">
-    <app-card class="col-4" *ngFor="let item of items" [item]="item"></app-card>
-  </div>
+<div class="text-center card-list col-md-12">
+   <app-card *ngFor="let item of items" [item]="item"></app-card>
 </div>
 
