--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
-<div class="header">
-	<a title="Trusthub" class="logo">
-	  <img src="/assets/trust.svg">
-	</a>
-
-	<a href="tel" title="Contate-nos">0800 123456</a>
-</div>
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<a title="Trusthub" class="logo">
+		  <img src="/assets/trust.svg">
+		</a>
+		<a id="header-phone" href="tel" title="Contate-nos">Telefone: 0800 123456</a>
+	</div>
+</nav>
