--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,19 @@
-<div class="main">
-  <h1>
-    NOSSAS MAQUINAS
-  </h1>
-  <p>
-    Escolha uma de nossas maquininhas para dar mais agilidade e segurança pro seus negócio
-  </p>
+<div class="main container-fluid">
+	<div class="row main-title">
+		<div class="col-md-12">
+		  <h1 class="text-center">
+		    NOSSAS MAQUINAS
+		  </h1>
+			
+		</div>
+		<div class="col-md-12">
+		  <p class="text-center">
+		    Escolha uma de nossas maquininhas para dar mais agilidade e segurança pro seu negócio
+		  </p>
+		</div>
+	</div>
 
-  <div>
+  <div class="row">
     <app-card-list [items]="plans"></app-card-list>
     
   </div>
