--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,24 +1,137 @@
-.card {
-  width: 46%;
-  margin: 2%;
-  border: 1px solid #e0e0e0;
-  border-radius: 5px;
-  padding: 1rem;
-  display: inline-block;
 
-  > div {
-    display: flex;
+@media screen and (min-width: 768px) {
+  .card {
+    width: 46%;
+    margin: 2%;
+    border-radius: 5px;
+    padding: 1rem;
+    float: left;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
 
     > div {
-      width: 50%;
-      height: 340px;
+      display: flex;
 
-      > img {
-        max-height: 100%;
-        max-width: 100%;
+      > div {
+        width: 50%;
+        height: 340px;
+
+        > img {
+          max-height: 100%;
+          max-width: 100%;
+        }
       }
     }
+
+    > .item {
+      height: 230px;
+    }
+    > .description {
+      height: 150px;
+      font-size: 15px;
+    }
+  }  
+  .parcels {
+    font-size: 14px;
+    padding-top: 7px;
+    > p {
+      display: block;
+      line-height: 0.984em;
+    }
   }
+  .parcel-price {
+    font-size: 38px;
+    font-weight: bold;
+
+    > p {
+      margin-top: -10px;
+      margin-left: -30px;
+    }
+  }
+  .discount-price {
+    font-size: 12px;
+    margin-top: -25px;
+  }
+  .description {
+    
+    >div {
+
+      padding: 0 30px 0 30px;
+
+      > p {
+        display: block;
+        line-height: 2em;
+        font-size: 16px;
+      }
+    } 
+  }
+
+}
+@media screen and (max-width: 768px) {
+  .card {
+    margin: 4%;
+    border-radius: 5px;
+    padding: 1rem;
+    float: left;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
+
+    > div {
+      display: flex;
+
+      > div {
+        width: 50%;
+
+        > img {
+          max-height: 100%;
+          max-width: 100%;
+        }
+      }
+    }
+    > .item {
+      height: 250px;
+    }
+    > .description {
+      height: 150px;
+      font-size: 15px;
+    }
+  }
+  .parcels {
+    font-size: 14px;
+    padding-top: 7px;
+    > p {
+      display: block;
+      line-height: 0.984em;
+    }
+  }
+  .parcel-price {
+    font-size: 38px;
+    font-weight: bold;
+
+    > p {
+      margin-top: -10px;
+      margin-left: -30px;
+    }
+  }
+  .discount-price {
+    font-size: 12px;
+    margin-top: -25px;
+  }
+  .description {
+    
+    >div {
+
+      padding: 0 30px 0 30px;
+
+      > p {
+        display: block;
+        line-height: 2em;
+        font-size: 16px;
+      }
+    } 
+  }
+}
+
+.price {
+  padding-top: 50px;
 }
 
 .button {
@@ -30,4 +143,5 @@
   width: 100%;
   margin-bottom: 10px;
   border-radius: 5px;
+  font-weight: bold;
 }
