--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,14 @@
-.header {
-  background-color: #ddd;
-  padding: 1rem 20%;
+.navbar {
+  background-color: #fff;
+  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
+}
+
+#header-phone {
+	color: #4EA854;
+	font-weight: bold;
+	font-size: 14px;
 }
