--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
-		<a title="Trusthub" class="logo">
+		<a title="Trusthub" class="logo" routerLink="/">
 		  <img src="/assets/trust.svg">
 		</a>
 		<a id="header-phone" href="tel" title="Contate-nos">Telefone: 0800 123456</a>
