--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,13 @@
 <div class="main container-fluid">
-	<div class="row main-title">
+	<div class="row main-title" *ngIf="ApiError.error != 0">
+		<div class="col-md-12">
+		  <h1 class="text-center">
+		    {{ ApiError.message }}
+		  </h1>
+		</div>
+	</div>
+
+	<div class="row main-title" *ngIf="ApiError.error == 0">
 		<div class="col-md-12">
 		  <h1 class="text-center">
 		    NOSSAS MAQUINAS
