--- a/src/app/maintenance/maintenance.component.html
+++ b/src/app/maintenance/maintenance.component.html
@@ -3,7 +3,7 @@
 		<div class="col-md-12 text-center">
 		  <img src="assets/site_em_manutencao.jpg" alt="">
 		  <p class="text-center">
-		    Estamos trabalhando para entregar uma ótima exeriência
+		    Estamos trabalhando para entregar uma ótima experiência
 		  </p>
 			
 		</div>
